templates/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tutorial-web-app
  name: tutorial-web-app
spec:
  selector:
    app: tutorial-web-app
  ports:
    - name: http
      port: 5001
